// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PM/PMTable default 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <table
      class="BaseTable__StyledTable-sc-10lnp9m-0 cHvXub PMTable___StyledTable-sc-1bray0a-0 hVNzGP"
    >
      <thead>
        <tr
          class="TableHead__StyledHeaderRow-msr3t5-0 eqrvph"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 kfgNsH"
            data-testid="table-head"
            scope="col"
            width="30px"
          >
            <div
              class="Box-xda4ls-0 hQvIAg Checkbox-sc-1nm58f1-2 eJJycu"
            >
              <label
                class="ClickInputLabel-j2axnv-0 kemUmZ"
              >
                <input
                  aria-invalid="false"
                  aria-label="select all"
                  aria-required="false"
                  class="Checkbox__CheckboxInput-sc-1nm58f1-1 ejYTGD Checkbox-sc-1nm58f1-2 eJJycu"
                  type="checkbox"
                />
                <div
                  class="Checkbox__VisualCheckbox-sc-1nm58f1-0 kUStCo"
                  data-testid="visual-checkbox"
                />
              </label>
            </div>
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            ID
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Expected Ship
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Customer
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Ship To
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Shipped
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Expected Quantity
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Actual Quantity
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Notes
          </th>
        </tr>
      </thead>
      <tbody
        data-testid="table-body"
      >
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 guzDVv table-row--odd"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            <div
              class="Box-xda4ls-0 hQvIAg Checkbox-sc-1nm58f1-2 eJJycu"
            >
              <label
                class="ClickInputLabel-j2axnv-0 kemUmZ"
              >
                <input
                  aria-invalid="false"
                  aria-label="Select row"
                  aria-required="false"
                  class="Checkbox__CheckboxInput-sc-1nm58f1-1 ejYTGD Checkbox-sc-1nm58f1-2 eJJycu"
                  type="checkbox"
                />
                <div
                  class="Checkbox__VisualCheckbox-sc-1nm58f1-0 kUStCo"
                  data-testid="visual-checkbox"
                />
              </label>
            </div>
          </td>
          <td>
            <a
              class="Link-sc-1lpx3d0-0 gxbSxg"
              color="blue"
              font-size="medium"
              href="/"
            >
              1234454
            </a>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-01
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            National Widgets
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            99 Reactor Blvd., Springfield, SI
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            No
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,025 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,800 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            --
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 guzDVv table-row--even"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            <div
              class="Box-xda4ls-0 hQvIAg Checkbox-sc-1nm58f1-2 eJJycu"
            >
              <label
                class="ClickInputLabel-j2axnv-0 kemUmZ"
              >
                <input
                  aria-invalid="false"
                  aria-label="Select row"
                  aria-required="false"
                  class="Checkbox__CheckboxInput-sc-1nm58f1-1 ejYTGD Checkbox-sc-1nm58f1-2 eJJycu"
                  type="checkbox"
                />
                <div
                  class="Checkbox__VisualCheckbox-sc-1nm58f1-0 kUStCo"
                  data-testid="visual-checkbox"
                />
              </label>
            </div>
          </td>
          <td>
            <a
              class="Link-sc-1lpx3d0-0 gxbSxg"
              color="blue"
              font-size="medium"
              href="/"
            >
              1234455
            </a>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-02
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            National Widgets
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            7 New St., New York, NY
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            Yes
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,250 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            --
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr
          class="TableFoot__StyledFooterRow-sc-1q56pdo-0 gVNRxT"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            colspan="2"
            scope="row"
          >
            Total
          </th>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            18,000 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            7,725 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
        </tr>
        <tr
          class="TableFoot__StyledFooterRow-sc-1q56pdo-0 gVNRxT"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            colspan="2"
            scope="row"
          >
            Attainment
          </th>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            41.5%
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
        </tr>
      </tfoot>
    </table>
    <nav
      aria-label="Pagination navigation"
      class="Box-xda4ls-0 Flex-hrfu3s-0 iCmkqG StatefulTable___StyledPagination-sc-196ra2t-0 hJdjBx"
    >
      <button
        aria-label="Go to previous results"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 kZsQns"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 bLUmHQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="leftArrow"
          ml="-8px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
          />
        </svg>
         ← Previous
      </button>
      <button
        aria-current="true"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 Pagination__PageNumber-sc-1fsx1pp-1 khkrHJ"
        disabled=""
      >
        1
      </button>
      <button
        aria-current="false"
        aria-label="Go to page {{count}}"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 Pagination__PageNumber-sc-1fsx1pp-1 bpxFKh"
      >
        2
      </button>
      <button
        aria-current="false"
        aria-label="Go to page {{count}}"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 Pagination__PageNumber-sc-1fsx1pp-1 bpxFKh"
      >
        3
      </button>
      <button
        aria-current="false"
        aria-label="Go to page {{count}}"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 Pagination__PageNumber-sc-1fsx1pp-1 bpxFKh"
      >
        4
      </button>
      <button
        aria-label="Go to next results"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 iFOkT"
      >
        Next → 
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 dEtgXr"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="rightArrow"
          mr="-8px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </button>
    </nav>
    <table
      class="BaseTable__StyledTable-sc-10lnp9m-0 cHvXub PMTable___StyledTable-sc-1bray0a-0 hVNzGP"
    >
      <thead>
        <tr
          class="TableHead__StyledHeaderRow-msr3t5-0 eqrvph"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            ID
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Expected Ship
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Customer
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Ship To
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Shipped
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Expected Quantity
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Actual Quantity
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Notes
          </th>
        </tr>
      </thead>
      <tbody
        data-testid="table-body"
      >
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 guzDVv table-row--odd"
          data-testid="table-row"
        >
          <td>
            <a
              class="Link-sc-1lpx3d0-0 gxbSxg"
              color="blue"
              font-size="medium"
              href="/"
            >
              1234454
            </a>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-01
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            National Widgets
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            99 Reactor Blvd., Springfield, SI
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            No
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,025 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,800 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            --
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 guzDVv table-row--even"
          data-testid="table-row"
        >
          <td>
            <a
              class="Link-sc-1lpx3d0-0 gxbSxg"
              color="blue"
              font-size="medium"
              href="/"
            >
              1234455
            </a>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-02
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            National Widgets
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            7 New St., New York, NY
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            Yes
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,250 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            --
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 guzDVv table-row--odd"
          data-testid="table-row"
        >
          <td>
            <a
              class="Link-sc-1lpx3d0-0 gxbSxg"
              color="blue"
              font-size="medium"
              href="/"
            >
              1234461
            </a>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-03
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            LTS Corp
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            11 Peter St., Toronto, ON
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            No
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,425 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            --
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 guzDVv table-row--even"
          data-testid="table-row"
        >
          <td>
            <a
              class="Link-sc-1lpx3d0-0 gxbSxg"
              color="blue"
              font-size="medium"
              href="/"
            >
              1234424
            </a>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-04
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            Neutron
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            5555 Hwy 6., Toronto, ON
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            No
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            675 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            --
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 guzDVv table-row--odd"
          data-testid="table-row"
        >
          <td>
            <a
              class="Link-sc-1lpx3d0-0 gxbSxg"
              color="blue"
              font-size="medium"
              href="/"
            >
              1234453
            </a>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-07
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            Scopewise
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            7 New St., New York, NY
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            No
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,575 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            --
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 guzDVv table-row--even"
          data-testid="table-row"
        >
          <td>
            <a
              class="Link-sc-1lpx3d0-0 gxbSxg"
              color="blue"
              font-size="medium"
              href="/"
            >
              1232221
            </a>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-22
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            Scopewise
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            871 Husky St., Toronto, ON
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            No
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,725 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            --
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            --
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 guzDVv table-row--odd"
          data-testid="table-row"
        >
          <td>
            <a
              class="Link-sc-1lpx3d0-0 gxbSxg"
              color="blue"
              font-size="medium"
              href="/"
            >
              1444453
            </a>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-23
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            Fresh Farm
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            7 New St., New York, NY
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            Yes
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            --
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            --
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 guzDVv table-row--even"
          data-testid="table-row"
        >
          <td>
            <a
              class="Link-sc-1lpx3d0-0 gxbSxg"
              color="blue"
              font-size="medium"
              href="/"
            >
              1224478
            </a>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-24
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            LTS Corp
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            12345 Rodeo Ave., Los Angeles, CA
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            No
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            --
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            --
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr
          class="TableFoot__StyledFooterRow-sc-1q56pdo-0 gVNRxT"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            colspan="1"
            scope="row"
          >
            Total
          </th>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            18,000 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            7,725 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
        </tr>
        <tr
          class="TableFoot__StyledFooterRow-sc-1q56pdo-0 gVNRxT"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            colspan="1"
            scope="row"
          >
            Attainment
          </th>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            41.5%
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
        </tr>
      </tfoot>
    </table>
    <table
      class="BaseTable__StyledTable-sc-10lnp9m-0 cHvXub PMTable___StyledTable-sc-1bray0a-0 hVNzGP"
    >
      <thead>
        <tr
          class="TableHead__StyledHeaderRow-msr3t5-0 eqrvph"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            ID
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Expected Ship
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Customer
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Ship To
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Shipped
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Expected Quantity
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Actual Quantity
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Notes
          </th>
        </tr>
      </thead>
      <tbody
        data-testid="table-body"
      >
        <tr
          data-testid="table-message-container"
        >
          <td
            colspan="8"
          >
            <div
              class="Box-xda4ls-0 TableBody__StyledMessageContainer-sc-1amzhx8-0 fEzznw nds-table__no-rows-content"
            >
              No records have been created for this table.
            </div>
          </td>
        </tr>
      </tbody>
      <tfoot />
    </table>
  </div>
</div>
`;

exports[`Storyshots PM/PMTable with expandable rows 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <table
      class="BaseTable__StyledTable-sc-10lnp9m-0 cHvXub PMTable___StyledTable-sc-1bray0a-0 hVNzGP"
    >
      <thead>
        <tr
          class="TableHead__StyledHeaderRow-msr3t5-0 eqrvph"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 kfgNsH"
            data-testid="table-head"
            scope="col"
            width="30px"
          />
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            ID
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Expected Ship
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Customer
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Ship To
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Shipped
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Expected Quantity
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Actual Quantity
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Notes
          </th>
        </tr>
      </thead>
      <tbody
        data-testid="table-body"
      >
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 guzDVv table-row--odd"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            <button
              aria-label="Expand row"
              class="ControlIcon__StyledButton-sc-1h83lvi-0 cCdEvo"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="Icon-fc7twp-0 efirdb"
                color="currentColor"
                fill="currentColor"
                focusable="false"
                height="32px"
                icon="downArrow"
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </button>
          </td>
          <td>
            <a
              class="Link-sc-1lpx3d0-0 gxbSxg"
              color="blue"
              font-size="medium"
              href="/"
            >
              1234454
            </a>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-01
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            National Widgets
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            99 Reactor Blvd., Springfield, SI
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            No
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,025 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,800 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            --
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 guzDVv table-row--even"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            <button
              aria-label="Expand row"
              class="ControlIcon__StyledButton-sc-1h83lvi-0 cCdEvo"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="Icon-fc7twp-0 efirdb"
                color="currentColor"
                fill="currentColor"
                focusable="false"
                height="32px"
                icon="downArrow"
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </button>
          </td>
          <td>
            <a
              class="Link-sc-1lpx3d0-0 gxbSxg"
              color="blue"
              font-size="medium"
              href="/"
            >
              1234455
            </a>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-02
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            National Widgets
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            7 New St., New York, NY
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            Yes
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,250 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            --
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 guzDVv table-row--odd"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            <button
              aria-label="Expand row"
              class="ControlIcon__StyledButton-sc-1h83lvi-0 cCdEvo"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="Icon-fc7twp-0 efirdb"
                color="currentColor"
                fill="currentColor"
                focusable="false"
                height="32px"
                icon="downArrow"
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </button>
          </td>
          <td>
            <a
              class="Link-sc-1lpx3d0-0 gxbSxg"
              color="blue"
              font-size="medium"
              href="/"
            >
              1234461
            </a>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-03
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            LTS Corp
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            11 Peter St., Toronto, ON
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            No
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,425 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            --
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr
          class="TableFoot__StyledFooterRow-sc-1q56pdo-0 gVNRxT"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            colspan="2"
            scope="row"
          >
            Total
          </th>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            18,000 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            7,725 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
        </tr>
        <tr
          class="TableFoot__StyledFooterRow-sc-1q56pdo-0 gVNRxT"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            colspan="2"
            scope="row"
          >
            Attainment
          </th>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            41.5%
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
        </tr>
      </tfoot>
    </table>
    <nav
      aria-label="Pagination navigation"
      class="Box-xda4ls-0 Flex-hrfu3s-0 iCmkqG StatefulTable___StyledPagination-sc-196ra2t-0 hJdjBx"
    >
      <button
        aria-label="Go to previous results"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 kZsQns"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 bLUmHQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="leftArrow"
          ml="-8px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
          />
        </svg>
         ← Previous
      </button>
      <button
        aria-current="true"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 Pagination__PageNumber-sc-1fsx1pp-1 khkrHJ"
        disabled=""
      >
        1
      </button>
      <button
        aria-current="false"
        aria-label="Go to page {{count}}"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 Pagination__PageNumber-sc-1fsx1pp-1 bpxFKh"
      >
        2
      </button>
      <button
        aria-current="false"
        aria-label="Go to page {{count}}"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 Pagination__PageNumber-sc-1fsx1pp-1 bpxFKh"
      >
        3
      </button>
      <button
        aria-label="Go to next results"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 iFOkT"
      >
        Next → 
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 dEtgXr"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="rightArrow"
          mr="-8px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </button>
    </nav>
  </div>
</div>
`;
